<resources>
    <string name="app_name">HaiXi</string>
    <string name="crash">应用崩溃详情</string>
    <!-- 导航 -->
    <string name="home">首页</string>
    <string name="car_select">选车</string>
    <string name="contrast">对比</string>
    <string name="news">消息</string>
    <string name="my">我</string>
    <string name="raise">众筹购车</string>
    <string name="information">优惠资讯</string>
    <string name="introduction">车贷介绍</string>

</resources>
