<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <com.daimajia.slider.library.SliderLayout
        android:id="@+id/home_slider"
        android:layout_width="match_parent"
        android:layout_height="200dp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3.0"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/home_raise"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:drawablePadding="5dp"
            android:drawableTop="@mipmap/raise"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/raise"/>

        <TextView
            android:id="@+id/home_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:drawablePadding="5dp"
            android:drawableTop="@mipmap/information"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/information"/>

        <TextView
            android:id="@+id/home_intro"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:drawablePadding="5dp"
            android:drawableTop="@mipmap/introduction"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/introduction"/>
    </LinearLayout>

</LinearLayout>